   section is read.
 * src/templates.c, src/utils.c, src/highlighting.c, src/utils.h:
   Add utils_get_config_files().
 * src/highlighting.c:
   Fix issue with default color not being reset if overridden with a
   system default color.
 * src/highlighting.c:
   Only reload filetype files when changing color scheme, not all
   configuration files.


2009-10-30  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/stash.c, src/stash.h:
   Use typedef instead of pointer for widget_id function arguments.


2009-10-29  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/pluginutils.c:
   Don't expand Plugin Preferences page spacing vertically to fill the
   height of the dialog.
 * src/interface.c, src/keybindings.c, src/keybindings.h, src/prefs.c,
   geany.glade, plugins/splitwindow.c:
   Allow GeanyKeyBinding label field to contain underscores, which won't
   be displayed by Geany. This saves adding near-duplicate translation
   strings.
   Add mnemonics for 3 Edit->Format menu items.
   Add keybindings_get_label().
 * src/interface.c, geany.glade:
   Use GtkVBoxes for Encoding prefs combo boxes to reduce width of prefs
   dialog.


2009-10-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/ui_utils.c:
   Desensitize Edit->Commands menu item when no docs are open.
 * src/interface.c, src/keybindings.c, src/callbacks.c,
   src/callbacks.h, geany.glade:
   Add 'Reflow, Transpose, Smart line indent' Edit->Format menu items.
 * src/sciwrappers.c, src/sciwrappers.h, src/editor.c:
   Add general function sci_get_string() that works with any string
   buffer messages that follow the Windows message convention.
 * src/pluginprivate.h, src/interface.c, src/keybindings.c,
   src/keybindings.h, src/callbacks.c, src/callbacks.h,
   src/pluginutils.c, src/pluginutils.h, geany.glade:
   Add 'Edit->Plugin Preferences' menu item and keybinding.
   Don't include plugindata.h in pluginutils.h because it redefines the